# huffman-rs

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  main.rs
