[package]
name = "mrg"
version = "0.1.0"
authors = ["milesgranger <miles59923@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
bit-vec = "^0.6"
rayon = "^1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true
